making the Makefile work

--- a/examples/todo/todo.html
+++ b/examples/todo/todo.html
@@ -5,11 +5,7 @@
     <script src="./vendor/storage.js"></script>
     <script src="./vendor/json2.js"></script>
     <!-- kraken files -->
-    <script src="../../lib/kraken.js"></script>
-    <script src="../../lib/kraken/pubsub.js"></script>
-    <script src="../../lib/kraken/controller.js"></script>
-    <script src="../../lib/kraken/view.js"></script>
-    <script src="../../lib/kraken/model.js"></script>
+    <script src="../../build/kraken.js"></script>
     <!-- todo files -->
     <script src="./app/todo.js"></script>
     <script src="./app/controllers/todo_form_controller.js"></script>
